--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,8 +37,9 @@ test:
   artifacts:
     when: always
     reports:
-      junit: build/test-results/test/**/TEST-*.xml
-             domain/build/test-results/test/TEST-*.xml
+      junit: 
+        - api/build/test-results/test/TEST-*.xml
+        - domain/build/test-results/test/TEST-*.xml
 
   cache:
     key: "$CI_COMMIT_REF_NAME"
