--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,8 @@ image: gradle:6.9.1-jdk11-openj9
 #.
 variables:
   GRADLE_OPTS: "-Dorg.gradle.daemon=false"
+  JACOCO_CSV_LOCATION: '$CI_PROJECT_DIR/build/jacocoCsv'
+
 
 before_script:
   - export GRADLE_USER_HOME=`pwd`/.gradle
@@ -33,7 +35,10 @@ build:
       
 test:
   stage: test
-  script: gradle test
+  script: 
+    - gradle test
+    - awk -F"," '{ instructions += $4 + $5; covered += $5 } END { print covered, "/", instructions, " instructions covered"; print 100*covered/instructions, "% covered" }' $JACOCO_CSV_LOCATION
+
   artifacts:
     when: always
     reports:
