--- a/api/build.gradle
+++ b/api/build.gradle
@@ -44,7 +44,16 @@ application {
     mainClassName = 'mancala.App'
 }
 
+jacocoTestReport {
+    reports {
+        csv.enabled true
+        csv.destination file("${buildDir}/jacocoCsv")
+    }
+    // ... Additional configuration for JaCoCo
+}
+
 test {
     // Use junit platform for unit tests
     useJUnitPlatform()
+    finalizedBy("jacocoTestReport")
 }
