--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -2,6 +2,7 @@ plugins {
     // Tell Gradle that we are builing java as a library (non-executable piece of code intended for use by other applications).
     id 'java'
     id 'java-library'
+    id 'jacoco'
 }
 
 repositories {
