--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -20,7 +20,7 @@ dependencies {
 jacocoTestReport {
     reports {
         csv.enabled true
-        csv.destination file("${buildDir}/jacocoCsv")
+        csv.destination file("/jacocoCsv")
     }
     // ... Additional configuration for JaCoCo
 }
