--- a/api/build.gradle
+++ b/api/build.gradle
@@ -45,7 +45,17 @@ application {
     mainClassName = 'mancala.App'
 }
 
+jacocoTestReport {
+    reports {
+        xml.enabled true
+        csv.enabled true
+        html.destination "${buildDir}/jacocoHtml"
+    }
+}
+
 test {
     // Use junit platform for unit tests
     useJUnitPlatform()
 }
+
+test.finalizedBy jacocoTestReport
