--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -51,7 +51,7 @@ test-jdk11:
     - 'gradle test jacocoTestReport' # jacoco must be configured to create an xml report
   artifacts:
     paths:
-      - build/jacoco/jacoco.xml
+      - api/build/jacoco/jacoco.xml
 
 cache:
   key: "$CI_COMMIT_REF_NAME"
