--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,7 +48,7 @@ jacocoTestReport:
   stage: test
   script:
     - 'gradle test jacocoTestReport'
-    - - awk -F"," '{ instructions += $4 + $5; covered += $5 } END { print covered, "/", instructions, " instructions covered"; print 100*covered/instructions, "% covered" }' api/build/reports/jacoco/test/jacocoTestReport.csv # jacoco must be configured to create an xml report
+    - awk -F"," '{ instructions += $4 + $5; covered += $5 } END { print covered, "/", instructions, " instructions covered"; print 100*covered/instructions, "% covered" }' api/build/reports/jacoco/test/jacocoTestReport.csv # jacoco must be configured to create an xml report
   artifacts:
     when: always
     reports:
