--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,6 +55,7 @@ jacocoTestReport:
     reports:
     paths:
       - api/build/reports/jacoco/test/jacocoTestReport.csv
+      - api/build/reports/jacoco/test/html/index.html
       - domain/build/reports/jacoco/test/jacocoTestReport.csv
 
 
