--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,6 +57,7 @@ jacocoTestReport:
       - api/build/reports/jacoco/test/jacocoTestReport.csv
       - api/build/reports/jacoco/test/html/index.html
       - domain/build/reports/jacoco/test/jacocoTestReport.csv
+      - domain/build/reports/jacoco/test/html/index.html
 
 
 
