--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -59,6 +59,18 @@ jacocoTestReport:
       - domain/build/reports/jacoco/test/jacocoTestReport.csv
       - domain/build/reports/jacoco/test/html/index.html
 
+pages:
+  stage: deploy
+  dependencies:
+    - test
+  script:
+   - mkdir public
+   - mv api/build/reports/jacoco/test/html/* public
+  artifacts:
+    paths:
+      - public
+  only:
+  - mvc
 
 
 cache:
