--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,6 +65,7 @@ pages:
     - jacocoTestReport
   script:
    - mkdir public
+   - rm -rf public/*
    - mv api/build/reports/jacoco/test/html/ public/
    - mv domain/build/reports/jacoco/test/html/ public/
   artifacts:
