--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,9 +65,8 @@ pages:
     - jacocoTestReport
   script:
    - mkdir public
-   - rm -rf public/*
-   - mv api/build/reports/jacoco/test/html/ public/
-   - mv domain/build/reports/jacoco/test/html/ public/
+   - mv api/build/reports/jacoco/test/html/* public/
+   - mv domain/build/reports/jacoco/test/html/* public/
   artifacts:
     paths:
       - public
