--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,8 +65,8 @@ pages:
     - jacocoTestReport
   script:
    - mkdir public
-   - mv api/build/reports/jacoco/test/html/* public/*
-   - mv domain/build/reports/jacoco/test/html/* public/*
+   - mv api/build/reports/jacoco/test/html/index.html public/
+   - mv domain/build/reports/jacoco/test/html/index.html public/
   artifacts:
     paths:
       - public
