--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,23 +1,7 @@
-# This file is a template, and might need editing before it works on your project.
-# To contribute improvements to CI/CD templates, please follow the Development guide at:
-# https://docs.gitlab.com/ee/development/cicd/templates.html
-# This specific template is located at:
-# https://gitlab.com/gitlab-org/gitlab/-/blob/master/lib/gitlab/ci/templates/Gradle.gitlab-ci.yml
-
-# This is the Gradle build system for JVM applications
-# https://gradle.org/
-# https://github.com/gradle/gradle
-
 image: gradle:6.9.1-jdk11-openj9
 
-# Disable the Gradle daemon for Continuous Integration servers as correctness
-# is usually a priority over speed in CI environments. Using a fresh
-# runtime for each build is more reliable since the runtime is completely
-# isolated from any previous builds.
-#.
 variables:
   GRADLE_OPTS: "-Dorg.gradle.daemon=false"
-
 
 before_script:
   - export GRADLE_USER_HOME=`pwd`/.gradle
@@ -31,6 +15,13 @@ build:
     paths:
       - build
       - .gradle
+
+cache:
+  key: "$CI_COMMIT_REF_NAME"
+  policy: pull
+  paths:
+    - build
+    - .gradle
 
 test:
   stage: test
@@ -48,34 +39,21 @@ jacocoTestReportAPI:
   script:
     - 'gradle test jacocoTestReport'
     - awk -F"," '{ instructions += $4 + $5; covered += $5 } END { print covered, "/", instructions, " instructions covered"; print 100*covered/instructions, "% covered" }' api/build/reports/jacoco/test/jacocoTestReport.csv
-    - awk -F"," '{ instructions += $4 + $5; covered += $5 } END { print covered, "/", instructions, " instructions covered"; print 100*covered/instructions, "% covered" }' domain/build/reports/jacoco/test/jacocoTestReport.csv # jacoco must be configured to create an xml report
   artifacts:
     when: always
     reports:
     paths:
       - api/build/reports/jacoco/test/jacocoTestReport.csv
       - api/build/reports/jacoco/test/html/*
+
+jacocoTestReportDomain:
+  stage: test
+  script:
+    - 'gradle test jacocoTestReport'
+    - awk -F"," '{ instructions += $4 + $5; covered += $5 } END { print covered, "/", instructions, " instructions covered"; print 100*covered/instructions, "% covered" }' domain/build/reports/jacoco/test/jacocoTestReport.csv 
+  artifacts:
+    when: always
+    reports:
+    paths:
       - domain/build/reports/jacoco/test/jacocoTestReport.csv
       - domain/build/reports/jacoco/test/html/*
-
-#pages:
-#  stage: deploy
-#  dependencies:
-#        - jacocoTestReport
-#  script:
-#   - mkdir public
-#   - mv api/build/reports/jacoco/test/html/index.html public/
-#   - mv domain/build/reports/jacoco/test/html/index.html public/
-#  artifacts:
-#    paths:
-#      - public
-#  only:
-#    - mvc
-
-
-cache:
-  key: "$CI_COMMIT_REF_NAME"
-  policy: pull
-  paths:
-    - build
-    - .gradle
