--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,3 +60,13 @@ jacocoTestReportDomain:
     paths:
       - domain/build/reports/jacoco/test/jacocoTestReport.csv
       - domain/build/reports/jacoco/test/html/*
+
+package:
+  image: docker:latest
+  services: 
+    - docker:dind
+  stage: package
+  script:
+    - docker build -t https://git.sogyo.nl/gvdwel/mancala-java/-/edit/mvc/api
+    - docker login -u gilab-ci-token -p $CI_BUILD_TOKEN git.sogyo.nl
+    - docker push https://git.sogyo.nl/gvdwel/mancala-java/-/edit/mvc/api
