--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,10 @@
 image: gradle:6.9.1-jdk11-openj9
 
+stages:
+  - build
+  - test
+  - package
+
 variables:
   GRADLE_OPTS: "-Dorg.gradle.daemon=false"
 
