--- a/api/build.gradle
+++ b/api/build.gradle
@@ -58,4 +58,12 @@ test {
     finalizedBy jacocoTestReport
 }
 
+jar {
+    manifest {
+        attributes(
+                'mancala.App': 'mancala.api.models'
+        )
+    }
+}
+
 
