--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -34,7 +34,7 @@ test {
 jar {
     manifest {
         attributes(
-                'mancala.App': 'mancala.api.models'
+                'App.java': 'com.mancala.App.java'
         )
     }
 }
