--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -34,7 +34,7 @@ test {
 jar {
     manifest {
         attributes(
-                'Main-Class': 'com.mancala.App.java'
+                'Main-Class': 'com.mancala.App'
         )
     }
 }
