--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -83,7 +83,7 @@ deploy_staging2:
   services: 
     - docker:dind
   script:
-    - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN git.sogyo.nl:5050
+    - docker login git.sogyo.nl:5050
     - docker pull git.sogyo.nl:5050/gvdwel/mancala-java:latest
     - docker run --rm -i -p 4200:80 git.sogyo.nl:5050/gvdwel/mancala-java:latest
   environment:
