--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint src/**/*.{ts,tsx}"
   },
   "dependencies": {
+    "http2-proxy": "^5.0.53",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-router-dom": "^5.2.0"
@@ -15,7 +16,7 @@
   "devDependencies": {
     "@snowpack/plugin-dotenv": "^2.0.4",
     "@snowpack/plugin-react-refresh": "^2.3.6",
-    "@snowpack/plugin-typescript": "^1.1.0",
+    "@snowpack/plugin-typescript": "^1.2.1",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.7",
@@ -25,7 +26,7 @@
     "eslint": "^7.18.0",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "snowpack": "^2.17.0",
+    "snowpack": "^3.0.0",
     "typescript": "^4.0.0"
   }
 }
