--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -15,6 +15,12 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
     testRuntimeOnly "org.junit.platform:junit-platform-commons:1.7.0"
+
+    implementation group: 'jakarta.activation', name: 'jakarta.activation-api', version: '1.2.1'
+
+    compile('javax.xml.bind:jaxb-api:2.3.0')
+    compile('javax.activation:activation:1.1')
+    compile('org.glassfish.jaxb:jaxb-runtime:2.3.0')
 }
 
 jacocoTestReport {
@@ -37,4 +43,13 @@ jar {
                 'Main-Class': 'mancala.App'
         )
     }
+    from {
+        configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+
+    }
+}
+
+compileJava {
+    sourceCompatibility = '1.8'
+    targetCompatibility = '1.8'
 }
